--- a/index.html
+++ b/index.html
@@ -181,26 +181,50 @@
         </div>
       </div> <!-- 結束 Tab 1 -->
 
-      <!-- Tab 2 -->
-      <div class="tab-content" id="tab2" role="tabpanel" hidden>
-        <div class="qa-card">
-          <div class="card-header"><h2>👥 挑選禮服可以帶幾位親友？</h2></div>
-          <div class="card-content">
-            <ul>
-              <li>✅ 因空間動線考量，包含新人最多 4 位入店。建議帶 1–2 位最了解您風格、能給予協助的親友，能讓挑選過程更順暢。</li>
-            </ul>
-          </div>
-        </div>
+<!-- Tab 2 -->
+<div class="tab-content" id="tab2" role="tabpanel" hidden>
+  <div class="qa-card">
+    <div class="card-header"><h2>💰 訂金制度</h2></div>
+    <div class="card-content">
+      <ul>
+        <li>• 非會員/新客，預約需先支付訂金 $500 才算預約成功。</li>
+        <li>• 未於 2 小時內匯款，系統將自動取消預約，請重新預約。</li>
+      </ul>
+    </div>
+  </div>
 
-        <div class="qa-card">
-          <div class="card-header"><h2>⏰ 挑禮限制時間與件數嗎？</h2></div>
-          <div class="card-content">
-            <ul>
-              <li>✅ 試穿時間以 1–2 小時為主，依您想租的套數彈性調整。建議先了解自己喜歡的風格，縮小範圍會挑得更順利。</li>
-            </ul>
-          </div>
-        </div>
-      </div> <!-- 結束 Tab 2 -->
+  <div class="qa-card">
+    <div class="card-header"><h2>🔄 改期與取消</h2></div>
+    <div class="card-content">
+      <ul>
+        <li>⏩️ 如需更改時間，請於前一日告知，限更改一次。</li>
+        <li>• 恕不受理當日改期或臨時取消。</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="qa-card">
+    <div class="card-header"><h2>⏰ 抵達時間</h2></div>
+    <div class="card-content">
+      <ul>
+        <li>⏩️ 本店採全預約制，一對一調理服務，每個時段皆為前一位客人完整清潔、消毒與準備的時間。</li>
+        <li>請依預約時間準時抵達即可，請避免提早 15-30 分鐘到店，以免影響作業流程與服務品質。</li>
+        <li>若提早到達，建議在隔壁 7-11 稍作等候，待預約時間再前來。</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="qa-card">
+    <div class="card-header"><h2>👥 攜伴與孩童接待說明</h2></div>
+    <div class="card-content">
+      <ul>
+        <li>⏩️ 為維持空間安靜、放鬆的服務品質，若需攜伴前來，請於預約時私訊告知方便我們提前安排座位。</li>
+        <li>本店目前不接待 12 歲以下孩童，也無法提供孩童等候或陪同空間，敬請理解。</li>
+        <li>感謝您的理解與尊重，予時很珍惜每一次相遇！</li>
+      </ul>
+    </div>
+  </div>
+</div> <!-- 結束 Tab 2 -->
 
     </div>
   </div>
