--- a/index.html
+++ b/index.html
@@ -147,39 +147,68 @@
   <div class="main-app-container">
     <div class="content-wrapper" id="content-wrapper">
 
-      <!-- Tab 1 -->
-      <div class="tab-content active" id="tab1" role="tabpanel">
-        <div class="qa-card">
-          <div class="card-header"><h2>💆🏻‍♀️ 育髮的原理是什麼？</h2></div>
-          <div class="card-content">
-            <ul>
-              <li>⏩️ 育髮是一種頭皮保養型調理服務，透過專業儀器協助代謝老廢角質，並導入營養精華，讓頭皮維持潔淨、穩定的狀態，使頭髮自然呈現豐盈感。此服務並非醫療行為，操作無侵入性，不使用藥物、激素，也不是紋繡或上色，而是需要透過時間與定期保養，逐步調理頭皮環境。</li>
-            </ul>
-          </div>
-        </div>
+<!-- Tab 1 -->
+<div class="tab-content active" id="tab1" role="tabpanel">
+  <div class="qa-card">
+    <div class="card-header"><h2>💆🏻‍♀️ 育髮的原理是什麼？</h2></div>
+    <div class="card-content">
+      <ul>
+        <li>⏩️ 育髮是一種頭皮保養型調理服務，透過專業儀器協助代謝老廢角質，並導入營養精華，讓頭皮維持潔淨、穩定的狀態，使頭髮自然呈現豐盈感。此服務並非醫療行為，操作無侵入性，不使用藥物、激素，也不是紋繡或上色，而是需要透過時間與定期保養，逐步調理頭皮環境。</li>
+      </ul>
+    </div>
+  </div>
 
-        <div class="qa-card">
-          <div class="card-header"><h2>🫧 育髮只做一次會有效嗎？</h2></div>
-          <div class="card-content">
-            <ul>
-              <li>⏩️ 單次體驗可感受到頭皮清爽與舒適度提升，而頭皮與髮況的整體表現，前期每月保養，幫頭髮恢復生長期。穩定後可調整頻率，持續護理才能有顯著效果。</li>
-            </ul>
-          </div>
-        </div>
+  <div class="qa-card">
+    <div class="card-header"><h2>🫧 育髮只做一次會有效嗎？</h2></div>
+    <div class="card-content">
+      <ul>
+        <li>⏩️ 單次體驗可感受到頭皮清爽與舒適度提升，而頭皮與髮況的整體表現，前期每月保養，幫頭髮恢復生長期。穩定後可調整頻率，持續護理才能有顯著效果。</li>
+      </ul>
+    </div>
+  </div>
 
-        <div class="qa-card">
-          <div class="card-header"><h2>⏳ 育髮調理多久做一次呢？</h2></div>
-          <div class="card-content">
-            <ul>
-              <li>⏩️ 初期每月1次，完整管理是3~6次，可另外參考育髮包堂方案。</li>
-              <li>一般建議：</li>
-              <li>• 初期調理階段：每月一次，協助頭皮維持潔淨與穩定狀態，改善毛髮環境、奠定健康基礎。</li>
-              <li>• 日常保養階段：2～5個月一次，作為定期頭皮管理，維持頭皮最佳狀態。</li>
-              <li>我們建議依實際頭皮狀況，由現場評估後調整適合的保養頻率，不追求快速改變，而是陪伴長期照顧。</li>
-            </ul>
-          </div>
-        </div>
-      </div> <!-- 結束 Tab 1 -->
+  <div class="qa-card">
+    <div class="card-header"><h2>⏳ 育髮調理多久做一次呢？</h2></div>
+    <div class="card-content">
+      <ul>
+        <li>⏩️ 初期每月1次，完整管理是3~6次，可另外參考育髮包堂方案。</li>
+        <li>一般建議：</li>
+        <li>• 初期調理階段：每月一次，協助頭皮維持潔淨與穩定狀態，改善毛髮環境、奠定健康基礎。</li>
+        <li>• 日常保養階段：2～5個月一次，作為定期頭皮管理，維持頭皮最佳狀態。</li>
+        <li>我們建議依實際頭皮狀況，由現場評估後調整適合的保養頻率，不追求快速改變，而是陪伴長期照顧。</li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- 新增育髮前注意事項 -->
+  <div class="qa-card">
+    <div class="card-header"><h2>💡 育髮前｜注意事項</h2></div>
+    <div class="card-content">
+      <ul>
+        <li>1. 前一晚或操作前需先洗頭。</li>
+        <li>2. 若頭皮本身有大範圍的毛囊炎、皮膚炎症狀，需立即找專業醫師諮詢。</li>
+        <li>3. 若正在孕期、癌症化療期，不建議立即操作育髮，等待療程結束再進行保養。</li>
+        <li>4. 若有染、燙、漂，須間隔一週，避免頭皮刺激敏感。</li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- 新增育髮後注意事項 -->
+  <div class="qa-card">
+    <div class="card-header"><h2>💡 育髮後｜注意事項</h2></div>
+    <div class="card-content">
+      <ul>
+        <li>1. 育髮後24小時內避免碰水洗頭。</li>
+        <li>2. 操作後會出現輕微泛紅或溫熱感，屬於正常現象，約1-2天內會退紅，請避免抓癢按摩頭皮。</li>
+        <li>3. 操作後一週內，需避免高溫曝曬、到游泳池、溫泉等場域，白天出門建議配戴帽子做好物理防曬。</li>
+        <li>4. 洗髮時使用溫水（35-37度），指腹輕柔按壓勿用力搓揉，吹髮時使用低溫吹乾即可。</li>
+        <li>5. 染、燙、漂須間隔一個月，避免化學藥劑衝突。</li>
+      </ul>
+    </div>
+  </div>
+
+</div> <!-- 結束 Tab 1 -->
+
 
 <!-- Tab 2 -->
 <div class="tab-content" id="tab2" role="tabpanel" hidden>
