--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div class="card-header"><h2>💆🏻‍♀️ 育髮的原理是什麼？</h2></div>
     <div class="card-content">
       <ul>
-        <li>⏩️ 育髮是一種頭皮保養型調理服務，透過專業儀器協助代謝老廢角質，並導入營養精華，讓頭皮維持潔淨、穩定的狀態，使頭髮自然呈現豐盈感。此服務並非醫療行為，操作無侵入性，不使用藥物、激素，也不是紋繡或上色，而是需要透過時間與定期保養，逐步調理頭皮環境。</li>
+        <li> 育髮是一種頭皮保養型調理服務，透過專業儀器協助代謝老廢角質，並導入營養精華，讓頭皮維持潔淨、穩定的狀態，使頭髮自然呈現豐盈感。此服務並非醫療行為，操作無侵入性，不使用藥物、激素，也不是紋繡或上色，而是需要透過時間與定期保養，逐步調理頭皮環境。</li>
       </ul>
     </div>
   </div>
@@ -162,7 +162,7 @@
     <div class="card-header"><h2>🫧 育髮只做一次會有效嗎？</h2></div>
     <div class="card-content">
       <ul>
-        <li>⏩️ 單次體驗可感受到頭皮清爽與舒適度提升，而頭皮與髮況的整體表現，前期每月保養，幫頭髮恢復生長期。穩定後可調整頻率，持續護理才能有顯著效果。</li>
+        <li> 單次體驗可感受到頭皮清爽與舒適度提升，而頭皮與髮況的整體表現，前期每月保養，幫頭髮恢復生長期。穩定後可調整頻率，持續護理才能有顯著效果。</li>
       </ul>
     </div>
   </div>
@@ -171,7 +171,7 @@
     <div class="card-header"><h2>⏳ 育髮調理多久做一次呢？</h2></div>
     <div class="card-content">
       <ul>
-        <li>⏩️ 初期每月1次，完整管理是3~6次，可另外參考育髮包堂方案。</li>
+        <li> 初期每月1次，完整管理是3~6次，可另外參考育髮包堂方案。</li>
         <li>一般建議：</li>
         <li>• 初期調理階段：每月一次，協助頭皮維持潔淨與穩定狀態，改善毛髮環境、奠定健康基礎。</li>
         <li>• 日常保養階段：2～5個月一次，作為定期頭皮管理，維持頭皮最佳狀態。</li>
@@ -226,7 +226,7 @@
     <div class="card-header"><h2>🔄 改期與取消</h2></div>
     <div class="card-content">
       <ul>
-        <li>⏩️ 如需更改時間，請於前一日告知，限更改一次。</li>
+        <li> 如需更改時間，請於前一日告知，限更改一次。</li>
         <li>• 恕不受理當日改期或臨時取消。</li>
       </ul>
     </div>
@@ -236,7 +236,7 @@
     <div class="card-header"><h2>⏰ 抵達時間</h2></div>
     <div class="card-content">
       <ul>
-        <li>⏩️ 本店採全預約制，一對一調理服務，每個時段皆為前一位客人完整清潔、消毒與準備的時間。</li>
+        <li> 本店採全預約制，一對一調理服務，每個時段皆為前一位客人完整清潔、消毒與準備的時間。</li>
         <li>請依預約時間準時抵達即可，請避免提早 15-30 分鐘到店，以免影響作業流程與服務品質。</li>
         <li>若提早到達，建議在隔壁 7-11 稍作等候，待預約時間再前來。</li>
       </ul>
@@ -247,7 +247,7 @@
     <div class="card-header"><h2>👥 攜伴與孩童接待說明</h2></div>
     <div class="card-content">
       <ul>
-        <li>⏩️ 為維持空間安靜、放鬆的服務品質，若需攜伴前來，請於預約時私訊告知方便我們提前安排座位。</li>
+        <li> 為維持空間安靜、放鬆的服務品質，若需攜伴前來，請於預約時私訊告知方便我們提前安排座位。</li>
         <li>本店目前不接待 12 歲以下孩童，也無法提供孩童等候或陪同空間，敬請理解。</li>
         <li>感謝您的理解與尊重，予時很珍惜每一次相遇！</li>
       </ul>
