--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
     <div class="card-header"><h2>💰 訂金制度</h2></div>
     <div class="card-content">
       <ul>
-        <li>• 非會員/新客，預約需先支付訂金 $500 才算預約成功。</li>
-        <li>• 未於 2 小時內匯款，系統將自動取消預約，請重新預約。</li>
+        <li>非會員/新客，預約需先支付訂金 $500 才算預約成功。</li>
+        <li>未於 2 小時內匯款，系統將自動取消預約，請重新預約。</li>
       </ul>
     </div>
   </div>
@@ -227,7 +227,7 @@
     <div class="card-content">
       <ul>
         <li> 如需更改時間，請於前一日告知，限更改一次。</li>
-        <li>• 恕不受理當日改期或臨時取消。</li>
+        <li>恕不受理當日改期或臨時取消。</li>
       </ul>
     </div>
   </div>
