--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div class="card-header"><h2>💰 訂金制度</h2></div>
     <div class="card-content">
       <ul>
-        <li>非會員/新客，預約需先支付訂金 $500 才算預約成功。</li>
+        <li>非會員/新客，預約需先支付訂金 $500 保留預約時段，服務人員才會到店內準備。</li>
         <li>未於 2 小時內匯款，系統將自動取消預約，請重新預約。</li>
       </ul>
     </div>
@@ -163,8 +163,8 @@
     <div class="card-header"><h2>🔄 改期與取消</h2></div>
     <div class="card-content">
       <ul>
-        <li> 如需更改時間，請於前一日告知，限更改一次。</li>
-        <li>恕不受理當日改期或臨時取消。</li>
+        <li>如需更改時間，請於前一日告知，限更改一次。</li>
+        <li>恕不受理當日改期或臨時取消，訂金不退還不延用。</li>
       </ul>
     </div>
   </div>
